# demo-python-django

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: django.yml
app/: db.sqlite3  settings.py  urls.py  views.py
app/core/: settings.py  urls.py
app/log/: admin.py
app/message/: admin.py  models.py
app/message/migrations/: 0001_initial.py  0002_alter_msg_body.py
app/module/: admin.py  models.py
docker/: Dockerfile
module/: admin.py
